# SPL-Projects

./: README.md
SPL1/: ReadMe.md.txt
SPL1/include/: Action.h  Session.h  User.h  Watchable.h
SPL1/src/: Action.cpp  Session.cpp  User.cpp  Watchable.cpp
SPL2/: ReadMe.md  ReadMe.md.txt  pom.xml
SPL2/src/main/java/bgu/spl/mics/: AgentsAvailableEvent.java  Future.java  GadgetAvailableEvent.java  MessageBroker.java  MessageBrokerImpl.java  MissionReceivedEvent.java  ReleaseAgentsEvent.java  SendAgentsEvent.java  SimplePublisher.java  Subscriber.java  TickBroadcast.java
SPL2/src/main/java/bgu/spl/mics/application/: MI6Runner.java
SPL2/src/main/java/bgu/spl/mics/application/passiveObjects/: Agent.java  Diary.java  Inventory.java  MissionInfo.java  Report.java  Squad.java
SPL2/src/main/java/bgu/spl/mics/application/publishers/: TimeService.java
SPL2/src/main/java/bgu/spl/mics/application/subscribers/: Intelligence.java  M.java  Moneypenny.java  Q.java
SPL2/src/test/java/bgu/spl/mics/: FutureTest.java  InventoryTest.java  MessageBrokerTest.java  SquadTest.java
SPL3/: ReadMe.md
SPL3/Boost_Echo_Client/: CMakeLists.txt  makefile
SPL3/Boost_Echo_Client/include/: Client.h  KeyBoardThread.h  connectionHandler.h
SPL3/Boost_Echo_Client/src/: Client.cpp  KeyBoardThread.cpp  connectionHandler.cpp  main.cpp
SPL3/spl-net/: pom.xml
SPL3/spl-net/src/main/java/bgu/spl/net/api/: StompMessageEncoderDecoder.java  StompMessagingProtocol.java  StompProtocol.java
SPL3/spl-net/src/main/java/bgu/spl/net/srv/: BaseServer.java  BlockingConnectionHandler.java  Client.java  (+10 more)
(+2 files in other folders)
